Bug 1379582 - Disable frames() timing function using a pref on release/beta channels; r=hiro

MozReview-Commit-ID: 4B8NwMAfyrS